--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -1558,16 +1558,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorReport'
-  /api/resources/v2/filter:
+  /api/resources/v2/list:
     get:
       tags:
         - Resources
-      summary: Filter resources the calling user has access to.
+      summary: List resources the calling user has been granted policies/roles/actions on.
         This endpoint MUST NOT be used to determine if a user has an action on a resource. This endpoint is ONLY
-        for determining the state of the user's permissions. It does not take into account enabled status, or Terms of Service Compliance.
+        for determining the state of the user's permissions. It does not take into account Auth Domains.
         To check if a user is allowed to execute an action on a resource, use /api/resources/v2/{resourceTypeName}/{resourceId}/action/{action}
         By default, public resources are not included. Including public resources incurs a 3x cost of DB performance.
-      operationId: filterResourcesV3
+      operationId: listResourceFlatV2
       parameters:
         - name: resourceTypes
           in: query
@@ -1615,7 +1615,65 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/FilteredResourcesResponse'
+                  $ref: '#/components/schemas/FilteredResourcesFlatResponse'
+  /api/resources/v2/list/hierarchical:
+    get:
+      tags:
+        - Resources
+      summary: List resources the calling user has been granted policies/roles/actions on.
+        This endpoint MUST NOT be used to determine if a user has an action on a resource. This endpoint is ONLY
+        for determining the state of the user's permissions. It does not take into account Auth Domains.
+        To check if a user is allowed to execute an action on a resource, use /api/resources/v2/{resourceTypeName}/{resourceId}/action/{action}
+        By default, public resources are not included. Including public resources incurs a 3x cost of DB performance.
+      operationId: listResourcesHierarchicalV2
+      parameters:
+        - name: resourceTypes
+          in: query
+          description: Types of resources to filter on
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+        - name: policies
+          in: query
+          description: Names of policies to filter on
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+        - name: roles
+          in: query
+          description: Names of roles to filter on
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+        - name: actions
+          in: query
+          description: Names of actions to filter on
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+        - name: includePublic
+          in: query
+          description: Include public resources in the response
+          required: false
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FilteredResourcesFlatResponse'
   /api/resources/v2/{resourceTypeName}:
     get:
       tags:
@@ -4106,14 +4164,14 @@ components:
           type: boolean
           description: Whether or not the user is enabled
       description: specification of a UpdateUserRequest
-    FilteredResourcesResponse:
+    FilteredResourcesFlatResponse:
       type: object
       properties:
         resources:
           type: array
           items:
-            $ref: '#/components/schemas/FilteredResource'
-    FilteredResource:
+            $ref: '#/components/schemas/FilteredFlatResource'
+    FilteredFlatResource:
       type: object
       properties:
         resourceType:
