ID-807 Get tos for user v2 (#1238)
* ID-807 Rename deprecated `TermsOfServiceDetails` to `OldTermsOfServiceDetails`.  Introduce new `TermsOfServiceDetails`

* ID-807 Adding route tests and some custom matchers

* ID-807 Not sure if others had this problem, but my tests were failing because of PostgresDirectoryDAOSpec, so adding the correct `assume` statements back into all the tests

* ID-807 adding tests for routes and rearranging things so that authenticated and unauthenticated routes both work

* ID-807 routing comment cleanup

* ID-807 validate user_id in url

* ID-807 additional routing tests to make sure Terms of Service Details for users are returned or denied properly

* ID-807 Convert flatspec to funspec.  Make sure we pass around requesting AND requested user so that we can properly authorize requests

* ID-807 test tidying

* ID-807 some validation rules

* ID-807 scalafmt

* ID-807 clarifying comment on new directive

* ID-807 route format

* ID-807 moving the route around slightly so that even the public docs are under /api

* ID-807 comments

* ID-807 fixing failing tests from new directive

* ID-807 fixing failing tests from new directive

* ID-807 fixing unused import

* ID-807 fixing stuff

* ID-807 Making the GET TOS Details endpoints return the right objects

* ID-807 scalafmt

* merge develop

* Add swagger docs

* Address tlang's comments

* Moved isAdmin check into TosService

* Addressing comments

* Refactoring getTermsOfServiceDetailsForUser

* Moved ensureAdminIfNeeded to new trait SupportsAdmin

---------

Co-authored-by: Greg Polumbo <>

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -3279,6 +3279,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TermsOfServiceConfigResponse'
+
+  /termsOfService/v1/user/self:
+    get:
+      tags:
+        - TermsOfService
+      summary: Returns details about the requesting user's terms of service status.
+      operationId: userTermsOfServiceGetSelf
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserTermsOfServiceDetails'
+        404:
+          description: user not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
+
+  /termsOfService/v1/user/{sam_user_id}:
+    get:
+      tags:
+        - TermsOfService
+      summary: gets a user's terms of service status, can only get another user's status if the requester is an admin.
+      operationId: userTermsOfServiceGet
+      parameters:
+        - name: sam_user_id
+          in: path
+          description: the id of the sam user to get terms of service status for
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: user exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserTermsOfServiceDetails'
+        404:
+          description: user not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
   /version:
     get:
       tags:
@@ -3940,6 +3987,24 @@ components:
             means that users who have not accepted the latest terms of service
             version (and who have accepted the previous version) will be allowed to use the system 
             for a period of time after the terms of service have been updated.
+    UserTermsOfServiceDetails:
+      required:
+        - latestAcceptedVersion
+        - acceptedOn
+        - permitsSystemUsage
+      type: object
+      properties:
+        latestAcceptedVersion:
+          type: string
+          description: The latest version of the terms of service that the requesting user has accepted.
+        acceptedOn:
+          type: string
+          format: date-time
+          description: The timestamp marking when the user accepted the terms of service matching latestAcceptedVersion.
+        permitsSystemUsage:
+          type: boolean
+          description: based on the user's currently accepted terms of service version and when the terms of service were last changed,
+            should the user still be permitted to use the system?
     TermsOfServiceDetails:
       required:
         - isEnabled
