ID-910 uami email

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -187,6 +187,7 @@ admin {
 
 azureServices {
   azureEnabled = ${?AZURE_ENABLED}
+  allowManagedIdentityUserCreation = ${?AZURE_ALLOW_MANAGED_IDENTITY_USER_CREATION}
   managedAppClientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
   managedAppClientSecret = ${?AZURE_MANAGED_APP_CLIENT_SECRET}
   managedAppTenantId = ${?AZURE_MANAGED_APP_TENANT_ID}
