--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -3327,7 +3327,16 @@ paths:
       summary: Accepts the current terms of service for the requesting user.
       operationId: userTermsOfServiceAcceptSelf
       responses:
-        200:
+        204:
+          description: OK
+  /termsOfService/v1/user/self/reject:
+    get:
+      tags:
+        - TermsOfService
+      summary: Rejects the current terms of service for the requesting user.
+      operationId: userTermsOfServiceRejectSelf
+      responses:
+        204:
           description: OK
   /termsOfService/v1/user/{sam_user_id}:
     get:
