config switch to disable google

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -60,6 +60,7 @@ schemaLock {
 }
 
 googleServices {
+  googleEnabled = ${?GOOGLE_ENABLED}
   appName = "firecloud:sam"
   appsDomain = ${?GOOGLE_APPS_SUBDOMAIN}
   environment = ${?ENVIRONMENT}
