--- a/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
+++ b/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
@@ -226,6 +226,15 @@ jobs:
       contents: 'read'
       id-token: 'write'
     steps:
+      - name: Select test context
+        id: test-context
+        run: |
+          if [ ${{ steps.extract-branch.outputs.name }} == "develop" ]; then
+            echo "test-context=dev-merge" >> "$GITHUB_OUTPUT"
+          else 
+            echo "test-context=pr-test" >> "$GITHUB_OUTPUT"
+          fi
+          
       - name: dispatch to terra-github-workflows
         uses: broadinstitute/workflow-dispatch@v3
         with:
@@ -234,7 +243,11 @@ jobs:
           ref: refs/heads/main
           token: ${{ secrets.BROADBOT_TOKEN}} # github token for access to kick off a job in the private repo
           # manually recalculate b/c env context is broken https://github.com/actions/runner/issues/480
-          inputs: '{ "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", "ENV": "${{ matrix.testing-env }}" }'
+          inputs: '{ 
+            "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", 
+            "ENV": "${{ matrix.testing-env }}", 
+            "test-context":${{ steps.test-context.outputs.test-context }}
+          }'
 
   destroy-bee-workflow:
     strategy:
