--- a/pact4s/src/test/resources/reference.conf
+++ b/pact4s/src/test/resources/reference.conf
@@ -103,9 +103,9 @@ testStuff = {
   }
   # Test MRG in which to create managed identities
   azure {
-    tenantId = "0cb7a640-45a2-4ed6-be9f-63519f86e04b"
-    subscriptionId = "3efc5bdf-be0e-44e7-b1d7-c08931e3c16c"
-    managedResourceGroupName = "mrg-terra-dev-previ-20220930130036"
+    tenantId = "fad90753-2022-4456-9b0a-c7e5b934e408"
+    subscriptionId = "f557c728-871d-408c-a28b-eb6b2141a087"
+    managedResourceGroupName = "e2e-8n6xqg"
   }
 }
 
