--- a/env/local.env
+++ b/env/local.env
@@ -36,7 +36,7 @@ export SCHEMA_LOCK_INSTANCE_ID="sam"
 export SUPER_ADMINS_GROUP="sam-super-admins@test.firecloud.org"
 export TERRA_GOOGLE_ORG_NUMBER="400176686919"
 export TOS_ENABLED="true"
-export TOS_GRACE_PERIOD_ENABLED="false"
+export TOS_GRACE_PERIOD_ENABLED="true"
 export TOS_BASE_URL="https://raw.githubusercontent.com/broadinstitute/terra-terms-of-service/main/versions"
 export TOS_PREVIOUS_VERSION="0"
 export TOS_VERSION="1"
