--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -3289,7 +3289,6 @@ paths:
         - name: doc
           in: query
           description: Array of strings containing 'termsOfService' and/or 'privacyPolicy'.
-          required: true
           schema:
             type: array
             items:
@@ -3301,7 +3300,7 @@ paths:
             text/plain:
               schema:
                 type: string
-  /termsOfService/v1/user/self:
+  /api/termsOfService/v1/user/self:
     get:
       tags:
         - TermsOfService
@@ -3314,14 +3313,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserTermsOfServiceDetails'
-        404:
+        403:
           description: user not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorReport'
-  /termsOfService/v1/user/self/accept:
-    get:
+  /api/termsOfService/v1/user/self/accept:
+    put:
       tags:
         - TermsOfService
       summary: Accepts the current terms of service for the requesting user.
@@ -3329,8 +3328,8 @@ paths:
       responses:
         204:
           description: OK
-  /termsOfService/v1/user/self/reject:
-    get:
+  /api/termsOfService/v1/user/self/reject:
+    put:
       tags:
         - TermsOfService
       summary: Rejects the current terms of service for the requesting user.
@@ -3338,7 +3337,7 @@ paths:
       responses:
         204:
           description: OK
-  /termsOfService/v1/user/{sam_user_id}:
+  /api/termsOfService/v1/user/{sam_user_id}:
     get:
       tags:
         - TermsOfService
@@ -4030,6 +4029,7 @@ components:
         - latestAcceptedVersion
         - acceptedOn
         - permitsSystemUsage
+        - isCurrentVersion
       type: object
       properties:
         latestAcceptedVersion:
@@ -4043,6 +4043,9 @@ components:
           type: boolean
           description: based on the user's currently accepted terms of service version and when the terms of service were last changed,
             should the user still be permitted to use the system?
+        isCurrentVersion:
+          type: boolean
+          description: Is the Terms of Service version the user has accepted the current Terms of Service version of the system.
     TermsOfServiceDetails:
       required:
         - isEnabled
@@ -4217,6 +4220,9 @@ components:
     SamUserRegistrationRequest:
       type: object
       properties:
+        acceptsTermsOfService:
+          type: boolean
+          description: does the user accept the terms of service
         userAttributes:
           $ref: '#/components/schemas/SamUserAttributes'
     UpdateUserRequest:
