--- a/env/local.env
+++ b/env/local.env
@@ -24,8 +24,8 @@ export GOOGLE_SUBDOMAIN_EMAIL="google@dev.test.firecloud.org"
 export INIT_WITH_LIQUIBASE="true"
 export LEONARDO_PET_SERVICE_ACCOUNT="leonardo-dev@broad-dsde-dev.iam.gserviceaccount.com"
 export OIDC_AUTHORITY_ENDPOINT="https://terradevb2c.b2clogin.com/terradevb2c.onmicrosoft.com/v2.0?p=b2c_1a_signup_signin_dev"
-export OPENCENSUS_SAMPLING_PROBABILITY=0
-export OPENCENSUS_STACKDRIVER_ENABLED="false"
+export OPENCENSUS_SAMPLING_PROBABILITY=1.0
+export OPENCENSUS_STACKDRIVER_ENABLED="true"
 export POSTGRES_PASSWORD="sam-test"
 export POSTGRES_READ_URL="jdbc:postgresql://localhost:5432/testdb"
 export POSTGRES_WRITE_URL="jdbc:postgresql://localhost:5432/testdb"
@@ -42,3 +42,5 @@ export TOS_VERSION="1"
 
 export SAM_LOG_APPENDER="Console-Standard"
 export LANDINGZONES_REUSE_IDS=false
+
+export JAVA_OPT="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5050"
