--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -111,9 +111,11 @@ googleServices {
   ]
 
   traceExporter {
-    enabled = ${?OPENCENSUS_STACKDRIVER_ENABLED}
+    enabled = ${?OPENCENSUS_STACKDRIVER_ENABLED} # for backwards compatibility
+    enabled = ${?GOOGLE_TRACE_ENABLED}
     projectId = ${?GOOGLE_PROJECT}
-    samplingProbability = ${?OPENCENSUS_SAMPLING_PROBABILITY}
+    samplingProbability = ${?OPENCENSUS_SAMPLING_PROBABILITY} # for backwards compatibility
+    samplingProbability = ${?GOOGLE_TRACE_SAMPLING_PROBABILITY}
   }
 }
 
