--- a/pact4s/src/test/resources/reference.conf
+++ b/pact4s/src/test/resources/reference.conf
@@ -56,6 +56,12 @@ googleServices {
     keyId = "dockerhub-key"
     rotationPeriod = "180 days"
   }
+
+  traceExporter {
+    enabled = false
+    projectId = "not-actually-used"
+    samplingProbability = 0
+  }
 }
 
 db {
