--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -994,6 +994,12 @@ resourceTypes = {
       "configure" = {
         description = "Edit and read the live configuration on a datarepo instance"
       }
+      "register_drs_aliases" = {
+        description = "Can register drs aliases"
+      }
+      "run_upgrade_flight" = {
+        description = "Can run an upgrade flight"
+      }
       "sync_duos_users" = {
         description = "Can sync a DUOS dataset's authorized users to TDR-managed Firecloud groups"
       }
@@ -1028,7 +1034,7 @@ resourceTypes = {
     ownerRoleName = "admin"
     roles = {
       admin = {
-        roleActions = ["list_jobs", "delete_jobs", "delete", "share_policy::steward", "share_policy::admin", "share_policy::duos_integration_admin", "read_policies", "alter_policies", "configure"]
+        roleActions = ["list_jobs", "delete_jobs", "delete", "share_policy::steward", "share_policy::admin", "share_policy::duos_integration_admin", "read_policies", "alter_policies", "configure", "register_drs_aliases", "run_upgrade_flight"]
         includedRoles = ["duos_integration_admin"]
       }
       steward = {
