--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -24,18 +24,6 @@ liquibase {
   initWithLiquibase = ${?INIT_WITH_LIQUIBASE}
 }
 
-opencensus-scala {
-  trace {
-    sampling-probability = ${?OPENCENSUS_SAMPLING_PROBABILITY}
-    exporters {
-      stackdriver {
-        enabled = ${?OPENCENSUS_STACKDRIVER_ENABLED}
-        project-id = ${?GOOGLE_PROJECT}
-      }
-    }
-  }
-}
-
 termsOfService {
   isTosEnabled = ${?TOS_ENABLED}
   isGracePeriodEnabled = ${?TOS_GRACE_PERIOD_ENABLED}
@@ -121,6 +109,14 @@ googleServices {
     ${?ADMIN_SERVICE_ACCOUNT_3}
     ${?ADMIN_SERVICE_ACCOUNT_4}
   ]
+
+  traceExporter {
+    enabled = ${?OPENCENSUS_STACKDRIVER_ENABLED} # for backwards compatibility
+    enabled = ${?GOOGLE_TRACE_ENABLED}
+    projectId = ${?GOOGLE_PROJECT}
+    samplingProbability = ${?OPENCENSUS_SAMPLING_PROBABILITY} # for backwards compatibility
+    samplingProbability = ${?GOOGLE_TRACE_SAMPLING_PROBABILITY}
+  }
 }
 
 db {
