--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,9 @@ automation/src/test/resources/
 codegen_java/*
 !codegen_java/project
 !codegen_java/templates
+codegen_java_old/*
+!codegen_java_old/project
+!codegen_java_old/templates
 
 # Ignore generated credentials from google-github-actions/auth
 gha-creds-*.json
