--- a/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
+++ b/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
@@ -198,7 +198,7 @@ jobs:
           { group_name: workflows, tag: "-n org.broadinstitute.dsde.test.api.MethodsTest" }
         ] # Rawls test groups
     runs-on: ubuntu-latest
-    needs: [sam-smoke-test-job]
+    needs: [sam-smoke-test-job, prepare-configs]
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -206,6 +206,7 @@ jobs:
       - name: dispatch to terra-github-workflows
         env:
           rawls_base_test_entrypoint: "testOnly -- -l ProdTest -l NotebooksCanaryTest"
+          test-context: ${{ needs.prepare-configs.outputs.test-context }}
         uses: broadinstitute/workflow-dispatch@v3
         with:
           workflow: .github/workflows/rawls-swat-tests.yaml
@@ -213,7 +214,14 @@ jobs:
           ref: refs/heads/main
           token: ${{ secrets.BROADBOT_TOKEN }} # github token for access to kick off a job in the private repo
           # manually recalculate b/c env context is broken https://github.com/actions/runner/issues/480
-          inputs: '{ "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", "ENV": "${{ matrix.testing-env }}", "test-group-name": "${{ matrix.test-group.group_name }}", "test-command": "${{ env.rawls_base_test_entrypoint }} ${{ matrix.test-group.tag }}", "java-version": "17" }'
+          inputs: '{  
+            "additional-args": "{\"logging\":\"true\",\"java-version\":\"17\",\"billing-project\":\"\"}",
+            "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", 
+            "ENV": "${{ matrix.testing-env }}", 
+            "test-group-name": "${{ matrix.test-group.group_name }}",
+            "test-command": "${{ env.rawls_base_test_entrypoint }} ${{ matrix.test-group.tag }}", 
+            "test-context": "${{ env.test-context }}"
+          }'
 
   orch-swat-test-job:
     strategy:
@@ -221,22 +229,15 @@ jobs:
         terra-env: [ dev ] # what versions of apps do we use to emulate types of environments
         testing-env: [ qa ] # what env resources to use, e.g. SA keys
     runs-on: ubuntu-latest
-    needs: [sam-smoke-test-job]
+    needs: [ sam-smoke-test-job, prepare-configs ]
     permissions:
       contents: 'read'
       id-token: 'write'
-    steps:
-      - name: Select test context
-        id: test-context
-        run: |
-          if [ ${{ steps.extract-branch.outputs.name }} == "develop" ]; then
-            echo "test-context=dev-merge" >> "$GITHUB_OUTPUT"
-          else 
-            echo "test-context=pr-test" >> "$GITHUB_OUTPUT"
-          fi
-          
+    steps:        
       - name: dispatch to terra-github-workflows
         uses: broadinstitute/workflow-dispatch@v3
+        env:
+          test-context: ${{ needs.prepare-configs.outputs.test-context }}
         with:
           workflow: .github/workflows/orch-swat-tests.yaml
           repo: broadinstitute/terra-github-workflows
@@ -246,7 +247,7 @@ jobs:
           inputs: '{ 
             "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", 
             "ENV": "${{ matrix.testing-env }}", 
-            "test-context": "${{ steps.test-context.outputs.test-context }}"
+            "test-context": "${{ env.test-context }}"
           }'
 
   destroy-bee-workflow:
