--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -1573,6 +1573,7 @@ paths:
           in: query
           description: Types of resources to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1581,6 +1582,7 @@ paths:
           in: query
           description: Names of policies to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1589,6 +1591,7 @@ paths:
           in: query
           description: Names of roles to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1597,6 +1600,7 @@ paths:
           in: query
           description: Names of actions to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1631,6 +1635,7 @@ paths:
           in: query
           description: Types of resources to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1639,6 +1644,7 @@ paths:
           in: query
           description: Names of policies to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1647,6 +1653,7 @@ paths:
           in: query
           description: Names of roles to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
@@ -1655,6 +1662,7 @@ paths:
           in: query
           description: Names of actions to filter on
           required: false
+          explode: false
           schema:
             type: array
             items:
