--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1200,7 +1200,7 @@ resourceTypes = {
         description = "Can lock a resource"
       }
       "unlock_resource" = {
-        description = "Can lock a resource"
+        description = "Can unlock a resource"
       }
     }
     ownerRoleName = "steward"
