ID-982 Tell users where to go to accept ToS

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -31,6 +31,7 @@ termsOfService {
   baseUrl = ${?TOS_BASE_URL}
   rollingAcceptanceWindowExpirationDatetime = ${?TOS_ROLLING_ACCEPTANCE_WINDOW_EXPIRATION_DATETIME}
   previousVersion = ${?TOS_PREVIOUS_VERSION}
+  acceptanceUrl = ${?TOS_ACCEPTANCE_URL}
 }
 
 oidc {
