--- a/env/test.env
+++ b/env/test.env
@@ -35,5 +35,6 @@ export TOS_GRACE_PERIOD_ENABLED="true"
 export TOS_BASE_URL="classpath:tos"
 export TOS_VERSION="1"
 export TOS_PREVIOUS_VERSION="0"
+export TOS_ACCEPTANCE_URL="sam.testUrl.mock"
 
 export SAM_LOG_APPENDER="Console-Standard"
