--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -213,3 +213,10 @@ azureServices {
   ]
 }
 
+janitor {
+  enabled = ${?JANITOR_ENABLED}
+  clientCredentialFilePath = ${?JANITOR_CLIENT_CREDENTIAL_FILE_PATH}
+  trackResourceProjectId = ${?JANITOR_TRACK_RESOURCE_PROJECT_ID}
+  trackResourceTopicId = ${?JANITOR_TRACK_RESOURCE_TOPIC_ID}
+}
+
