--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -200,3 +200,10 @@ resourceTypes {
     reuseIds = false
   }
 }
+
+janitor {
+  enabled = true
+  clientCredentialFilePath = "./janitor_client_sa.json"
+  trackResourceProjectId = "terra-kernel-k8s"
+  trackResourceTopicId = "crljanitor-tools-pubsub-topic"
+}
