Update env files

--- a/env/local.env
+++ b/env/local.env
@@ -41,3 +41,8 @@ export TOS_VERSION="1"
 
 export SAM_LOG_APPENDER="Console-Standard"
 export LANDINGZONES_REUSE_IDS=false
+
+export JANITOR_ENABLED=false
+export JANITOR_CLIENT_CREDENTIAL_FILE_PATH=""
+export JANITOR_TRACK_RESOURCE_PROJECT_ID=""
+export JANITOR_TRACK_RESOURCE_TOPIC_ID=""
